[project]
name = "pycharm-init"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.1.0",
    "loguru>=0.7.3",
    "pendulum>=3.1.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
]
[tool.black]
line-length = 140
target-version = ["py312"]

[tool.mypy]
python_version = 3.12

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
extend-select = ["PL"]

[tool.uv.workspace]
members = ["test"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
